==> Templarian/moddable/modules/io/i2c/pico/_i2c.c <==
#include "xsmc.h"			// xs bindings for microcontroller
#include "mc.xs.h"			// for xsID_* values
#include "xsHost.h"			// esp platform support
#include "builtinCommon.h"
#include "hardware/i2c.h"

void _xs_i2c_constructor(xsMachine *the)
{
	I2C i2c;
	int data, clock, hz, address;
	int timeout = 200;
	uint8_t pullup = 1;
	uint8_t port;

	xsmcVars(1);

	if (!xsmcGet(xsVar(0), xsArg(0), xsID_data))
		xsRangeError("data required");
	data = builtinGetPin(the, &xsVar(0));

	if (!xsmcGet(xsVar(0), xsArg(0), xsID_clock))
		xsRangeError("clock required");
	clock = builtinGetPin(the, &xsVar(0));

	if (usingPins(data, clock))
		;
	else if (!builtinIsPinFree(data) || !builtinIsPinFree(clock))
		xsRangeError("inUse");

	if (!xsmcGet(xsVar(0), xsArg(0), xsID_address))
		xsRangeError("address required");
	address = builtinGetPin(the, &xsVar(0));
	if ((address < 0) || (address > 127))
		xsRangeError("invalid address");

	for (i2c = gI2C; i2c; i2c = i2c->next) {
		if ((i2c->data == data) && (i2c->clock == clock) && (i2c->address == address))
			xsRangeError("duplicate address");
	}

	xsmcGet(xsVar(0), xsArg(0), xsID_hz);
	hz = xsmcToInteger(xsVar(0));
	if ((hz <= 0) || (hz > 20000000))
		xsRangeError("invalid hz");

	if (xsmcGet(xsVar(0), xsArg(0), xsID_timeout))
		timeout = xsmcToInteger(xsVar(0));

	if (xsmcGet(xsVar(0), xsArg(0), xsID_pullup))
		pullup = xsmcToBoolean(xsVar(0)) ? 1 : 0;

	if (!checkValidI2C(data, clock, &port))
		xsUnknownError("invalid configuration");

	builtinInitializeTarget(the);
	if (kIOFormatBuffer != builtinInitializeFormat(the, kIOFormatBuffer))
		xsRangeError("invalid format");

	i2c = c_malloc(sizeof(I2CRecord));
	if (!i2c)
		xsRangeError("no memory");

	xsmcSetHostData(xsThis, i2c);
	i2c->obj = xsThis;
	xsRemember(i2c->obj);
	i2c->clock = clock;
	i2c->data = data;
	i2c->hz = hz;
	i2c->address = address;
	i2c->timeout = timeout * 1000;
	i2c->pullup = pullup;
	i2c->port = port;
	if (port == 0)
		i2c->inst = i2c0;
	else
		i2c->inst = i2c1;

	i2c->next = gI2C;
	gI2C = i2c;

	builtinUsePin(data);
	builtinUsePin(clock);

	gpio_set_function(data, GPIO_FUNC_I2C);
	gpio_set_function(clock, GPIO_FUNC_I2C);

	if (pullup) {
		gpio_pull_up(data);
		gpio_pull_up(clock);
	}

}

void _xs_i2c_destructor(void *data)
{
	I2C i2c = data;
	if (!i2c)
		return;

	if (i2c == gI2CActive) {
		gI2CActive = NULL;
	}

	if (gI2C == i2c)
		gI2C = i2c->next;
	else {
		I2C walker;
		for (walker = gI2C; walker; walker = walker->next) {
			if (walker->next == i2c) {
				walker->next = i2c->next;
				break;
			}
		}
	}

	if (!usingPins(i2c->data, i2c->clock)) {
		if (i2c->pullup) {
			gpio_set_function(i2c->data, GPIO_FUNC_NULL);
			gpio_set_function(i2c->clock, GPIO_FUNC_NULL);
		}
		builtinFreePin(i2c->data);
		builtinFreePin(i2c->clock);
	}

	c_free(i2c);
}

void _xs_i2c_read(xsMachine *the)
{
	I2C i2c = xsmcGetHostDataValidate(xsThis, _xs_i2c_destructor);
	xsUnsignedValue length;
	int err;
	uint8_t stop = true;
	void *buffer;

	if (xsmcArgc > 1)
		stop = xsmcToBoolean(xsArg(1));

	if (xsReferenceType == xsmcTypeOf(xsArg(0))) {
		xsResult = xsArg(0);
		xsmcGetBufferWritable(xsResult, &buffer, &length);
		xsmcSetInteger(xsResult, length);
	}
	else {
 		length = xsmcToInteger(xsArg(0));
		buffer = xsmcSetArrayBuffer(xsResult, NULL, length);
	}

	if (!i2cActivate(i2c))
		xsUnknownError("activate failed");

	err = i2c_read_timeout_us(i2c->inst, i2c->address, buffer, length, !stop, i2c->timeout);
	if (err < 0)
		xsUnknownError("read failed");
}

void _xs_i2c_write(xsMachine *the)
{
	I2C i2c = xsmcGetHostDataValidate(xsThis, _xs_i2c_destructor);
	int err;
	xsUnsignedValue length;
	uint8_t stop = true;
	void *buffer;

	if (xsmcArgc > 1)
		stop = xsmcToBoolean(xsArg(1));

	xsmcGetBufferReadable(xsArg(0), &buffer, &length);

	if (!i2cActivate(i2c))
		xsUnknownError("activate failed");

	err = i2c_write_timeout_us(i2c->inst, i2c->address, buffer, length, !stop, i2c->timeout);
	if (err < 0)
		xsUnknownError("write failed");
}

void _xs_i2c_writeRead(xsMachine *the)
{
	I2C i2c = xsmcGetHostDataValidate(xsThis, _xs_i2c_destructor);
	xsUnsignedValue lengthWrite, lengthRead;
	void *bufferWrite, *bufferRead;
	uint8_t stop = true;
	int err;

	if (xsmcArgc > 2)
		stop = xsmcToBoolean(xsArg(2));

	if (xsReferenceType == xsmcTypeOf(xsArg(1))) {
		xsResult = xsArg(1);
		xsmcGetBufferWritable(xsResult, &bufferRead, &lengthRead);
		xsmcSetInteger(xsResult, lengthRead);
	}
	else {
 		lengthRead = xsmcToInteger(xsArg(1));
		bufferRead = xsmcSetArrayBuffer(xsResult, NULL, lengthRead);
	}
	xsmcGetBufferReadable(xsArg(0), &bufferWrite, &lengthWrite);

	if (!i2cActivate(i2c))
		xsUnknownError("activate failed");

	err = i2c_write_timeout_us(i2c->inst, i2c->address, bufferWrite, lengthWrite, !stop, i2c->timeout);
	if (err < 0)
		xsUnknownError("write failed");

	err = i2c_read_timeout_us(i2c->inst, i2c->address, bufferRead, lengthRead, false, i2c->timeout);
	if (err < 0)
		xsUnknownError("read failed");
}

uint8_t i2cActivate(I2C i2c)
{
	if ((i2c == gI2CActive) ||
		(gI2CActive && (gI2CActive->data == i2c->data) && (gI2CActive->clock == i2c->clock) && (gI2CActive->hz == i2c->hz) && (gI2CActive->port == i2c->port) && (gI2CActive->pullup == i2c->pullup)))
		return 1;

	if (gI2CActive) {
		i2c_deinit(gI2CActive->inst);
		gpio_set_function(gI2CActive->data, GPIO_FUNC_NULL);
		gpio_set_function(gI2CActive->clock, GPIO_FUNC_NULL);
		gI2CActive = NULL;
	}

	i2c_init(i2c->inst, i2c->hz);
	gpio_set_function(i2c->data, GPIO_FUNC_I2C);
	gpio_set_function(i2c->clock, GPIO_FUNC_I2C);

	if (i2c->pullup) {
		gpio_pull_up(i2c->data);
		gpio_pull_up(i2c->clock);
	}

	gI2CActive = i2c;

	return 1;
}
